# XpeHb

./: .gitignore  CMakeLists.txt  Factory.cpp  Factory.h  Igrulka.cpp  Igrulka.vcxproj  Igrulka.vcxproj.filters  buttons.py  camera.py  camera_backup.py  class_and_agent.py  culture.cpp  culture.h  culture.py  cycle.cpp  factory.py  game_cycle.cpp  game_cycle.h  generators.cpp  generators.py  goods.cpp  goods.h  goods.py  main.cpp  main.py  main_old.py  map  maps.py  menu.cpp  menu.h  menu.py  package.json  pops.cpp  pops.h  pops.py  religion.cpp  religion.h  religion.py  rivers.py  settlement.cpp  (+10 more)
Debug/: vc142.idb
Debug/Igrulka.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Igrulka.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
